# TC1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/tc_01/api/: main.py
src/tc_01/config/: variables.py
src/tc_01/core/: logs.py
src/tc_01/dashboard/: app.py
src/tc_01/data/: books_data.csv
src/tc_01/routers/: books.py  categories.py  metrics.py  scraping.py
src/tc_01/scripts/: scraping.py
