[project]
name = "tc-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Valterlan Dantas",email = "f.valterlan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "tc_01", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
